@@ -2,7 +2,7 @@ from django.contrib.auth import get_user_model
 from django.test import TestCase
 from django.test.utils import override_settings
 
-from wagtail.admin.templatetags.wagtailadmin_tags import avatar_url
+from wagtail.admin.templatetags.wagtailadmin_tags import avatar_url, notification_static
 from wagtail.images.tests.utils import get_test_image_file
 from wagtail.users.models import UserProfile
 
@@ -42,3 +42,20 @@ class TestAvatarTemplateTag(TestCase):
 
         url = avatar_url(self.test_user)
         self.assertIn('custom-avatar', url)
+
+
+class TestNotificationStaticTemplateTag(TestCase):
+    @override_settings(STATIC_URL='/static/')
+    def test_local_notification_static(self):
+        url = notification_static('wagtailadmin/images/email-header.jpg')
+        self.assertEqual('/static/wagtailadmin/images/email-header.jpg', url)
+
+    @override_settings(STATIC_URL='/static/', BASE_URL='http://localhost:8000')
+    def test_local_notification_static_baseurl(self):
+        url = notification_static('wagtailadmin/images/email-header.jpg')
+        self.assertEqual('http://localhost:8000/static/wagtailadmin/images/email-header.jpg', url)
+
+    @override_settings(STATIC_URL='https://s3.amazonaws.com/somebucket/static/', BASE_URL='http://localhost:8000')
+    def test_remote_notification_static(self):
+        url = notification_static('wagtailadmin/images/email-header.jpg')
+        self.assertEqual('https://s3.amazonaws.com/somebucket/static/wagtailadmin/images/email-header.jpg', url)
